# branches

./: .gitignore  CMakeLists.txt  README.md  branchesConfig.cmake  project_meta_info.in
atp/: CMakeLists.txt
atp/src/: children.cpp  constructor.cpp
branches/: CMakeLists.txt
branches/headers/: branches.hpp  geom.hpp
branches/src/: branches.cpp  geom.cpp  test_run.cpp
documentation/: sun_path.md
include/: branches.hpp  geometry.hpp
source/: CMakeLists.txt  branchesConfig.cmake  project_meta_info.in
source/branches/: CMakeLists.txt
source/branches/headers/: branch.hpp  branches.hpp  geom.hpp
source/branches/src/: branch.cpp  branches.cpp  geom.cpp  test_run.cpp
source/branches/test/: branch_tests.cpp  geom_tests.cpp
src/: branches.cpp  geometry.cpp  tree_builder.cpp
test/: CMakeLists.txt
